--- a/views/pages/amongus.ejs
+++ b/views/pages/amongus.ejs
@@ -13,7 +13,7 @@
 
     <h3 id="links">Liens rapides</h3>
    
-    <table class="bordered fullCenter">
+    <table class="bordered fullCenter" width="100%">
         <thead>
             <tr>
                 <%for(const [_, link] of Object.entries(links)){%>
