--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -19,10 +19,21 @@
 <br/>
 
 <div>
+    <h3 class="link"><a href="/printTftPlayers">Print TFT Players</a></h3>
+
+    <%if(lang == "fr"){%>
+        Un module permettant d'avoir des informations sur les joueurs TFT d'un tournoi.
+    <%}else{%>
+        A module that is getting information about players of TFT's tournament.
+    <%}%>
+</div>
+<br/>
+
+<div>
     <h3 class="link"><a href="/amongus">Among Us</a></h3>
 
     <%if(lang == "fr"){%>
-        Plusieurs guides sur Among Us. Ainsi que des liens rapides de téléchargement.<br/>
+        Plusieurs guides sur Among Us. Ainsi que des liens rapides de téléchargement.
     <%}else{%>
         Different guides related to Among Us <i>(only available in french for now)</i>
     <%}%>
