--- a/views/partials/layout.ejs
+++ b/views/partials/layout.ejs
@@ -12,6 +12,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js"></script>
     <script type="text/javascript" src="./scripts/dynamic.js"></script>
     <script type="text/javascript" src="./scripts/barba.js" defer></script>
+    <script type="text/javascript" src="./scripts/printTftPlayers.js" defer></script>
 </head>
 
 <body class="<%=theme%>Theme" data-barba="wrapper">
