--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -173,11 +173,16 @@ span.left{
 
 /** Fieldset */
 fieldset{
-    background-color: rgb(77, 77, 77);
     border-radius: 15px;
     box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.7);
     padding: 10px;
     margin:  10px 5px 10px 5px;
+}
+.whiteTheme fieldset{
+    background-color: rgb(178, 178, 178);
+}
+.blackTheme fieldset{
+    background-color: rgb(77, 77, 77);
 }
 
 fieldset legend{
@@ -206,15 +211,10 @@ fieldset input[type=button], button{
     color: inherit;
     padding: 5px;
     font-size: bold;
-    transition-duration: 0.4s;
+    transition: background-color 0.4s;
 }
 fieldset input[type=button]:hover, button:hover{
     background-color: crimson;
-}
-button{
-    position: absolute;
-    right: 9.3%;
-    top: 7em;
 }
 
 fieldset table{
