--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,7 +8,7 @@
 <br/>
 
 <div>
-    <h3 class="link"><a href="/resume">Portfolio</a></h3>
+    <a href="/resume"><h3 class="link">Portfolio</h3></a>
 
     <%if(lang == "fr"){%>
         Mon propre Portfolio / Curriculum Vitae <i>(en cours de dev ...)</i>
@@ -19,7 +19,7 @@
 <br/>
 
 <div>
-    <h3 class="link"><a href="/printTftPlayers">Print TFT Players</a></h3>
+    <a href="/printTftPlayers"><h3 class="link">Print TFT Players</h3></a>
 
     <%if(lang == "fr"){%>
         Un module permettant d'avoir des informations sur les joueurs TFT d'un tournoi.
@@ -30,7 +30,7 @@
 <br/>
 
 <div>
-    <h3 class="link"><a href="/amongus">Among Us</a></h3>
+    <a href="/amongus"><h3 class="link">Among Us</h3></a>
 
     <%if(lang == "fr"){%>
         Plusieurs guides sur Among Us. Ainsi que des liens rapides de téléchargement.
