--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -14,8 +14,8 @@
     <span class="right">
         <img src="./images/footer/github.png" alt="FR" onclick="window.open('https://github.com/Floliroy', '_blank')" />
         <img src="./images/footer/twitter.png" alt="FR" onclick="window.open('https://twitter.com/Floliroy', '_blank')" />
-        <img src="./images/footer/facebook.png" alt="FR" onclick="window.open('https://www.facebook.com/florian.terrier.7', '_blank')" />
-        <img src="./images/footer/youtube.png" alt="FR" onclick="window.open('https://www.youtube.com/channel/UC2Apxbj6zaGE2FcFoxwhGug', '_blank')" />
+        <!--<img src="./images/footer/facebook.png" alt="FR" onclick="window.open('https://www.facebook.com/florian.terrier.7', '_blank')" />
+        <img src="./images/footer/youtube.png" alt="FR" onclick="window.open('https://www.youtube.com/channel/UC2Apxbj6zaGE2FcFoxwhGug', '_blank')" />-->
         &nbsp;&nbsp;&nbsp;
     </span>
 </footer>
