--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,7 +3,19 @@
     <span class="left">
         &nbsp;&nbsp;&nbsp;
         <strong>
-            <a href="/">HOME</a>
+            <a href="/">
+                Portfolio
+            </a>
+        </strong>
+        &nbsp;&nbsp;
+        <strong>
+            <a href="/resume">
+                <%if(lang == "fr"){%>
+                    CV
+                <%}else{%>
+                    Resume
+                <%}%>
+            </a>
         </strong>
     </span>
     <span class="right">
