--- a/public/styles/footer.css
+++ b/public/styles/footer.css
@@ -1,8 +1,8 @@
 .blackTheme footer{
-    background-color: #2f3136;
+    background: linear-gradient(transparent, 20%, #2f3136) !important;
 }
 .whiteTheme footer{
-    background-color: whitesmoke;
+    background: linear-gradient(transparent, 20%, #f5f5f5) !important;
 }
 
 footer{
@@ -13,7 +13,9 @@ footer{
     bottom: 0;
     padding: 1.5em 0 1em 0;
     text-align: center;
-    box-shadow: 0px -2px 5px 2px rgba(112, 128, 144, 0.5);
+
+    padding-top: 32px !important;
+    backdrop-filter: blur(3px);
 }
 
 footer img{
