--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -4,14 +4,27 @@ header{
     width: 100%;
     left: 0;
     top: 0;
-    padding: 1.5em 0 1.5em 0;
-    box-shadow: 0px 2px 5px 2px rgba(112, 128, 144, 0.5);
+    padding: 1em 0 1.5em 0.5em;
+    font-size: larger;
+    
+    padding-bottom: 32px !important;
+    backdrop-filter: blur(3px);
 }
 .blackTheme header{
-    background-color: #2f3136;
+    background: linear-gradient(#2f3136, 80%, transparent) !important;
 }
 .whiteTheme header{
-    background-color: whitesmoke;
+    background: linear-gradient(#f5f5f5, 80%, transparent) !important;
+}
+
+header a:hover{
+    transition: color 0.3s;
+}
+.blackTheme header a:hover{
+    color: lightgrey !important;
+}
+.whiteTheme header a:hover{
+    color: #36393f !important;
 }
 
 header span img{
