--- a/views/partials/layout.ejs
+++ b/views/partials/layout.ejs
@@ -6,6 +6,7 @@
 
     <link rel="icon" type="image/png" href="./logo.png" />
     <link rel="stylesheet" type="text/css" href="./styles/index.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css" integrity="sha512-GQGU0fMMi238uA+a/bdWJfpUGKUkBdgfFdgBm72SUQ6BeyWjoY/ton0tEjH+OSH9iP4Dfh+7HM0I9f5eR0L/4w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="https://unpkg.com/@barba/core"></script>
@@ -22,11 +23,13 @@
     <%-include("header")%>
     <br/>
 
-    <div id="main" data-barba="container" data-barba-namespace="<%=body%>">
+    <div id="main" class="container" data-barba="container" data-barba-namespace="<%=body%>">
         <%-include(`../pages/${body}`)%>
     </div>
     
     <br/>
     <%-include("footer")%>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js" integrity="sha512-OvBgP9A2JBgiRad/mM36mkzXSXaJE9BEIENnVEmeZdITvwT09xnxLtT4twkCa8m/loMbPHsvPl0T8lRGVBwjlQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
 </html>
