ajout team aegis

--- a/views/pages/portfolio.ejs
+++ b/views/pages/portfolio.ejs
@@ -16,17 +16,11 @@ Ces données sont ensuite stockées dans un Google Sheet (également via des req
 Enfin, une interface administrateur, utilisée pour contrôler les différentes fonctions et les algorithmes de tri que j'ai développés, est accessible via un bot Discord. Cela facilite la gestion des droits d'accès au salon contenant l'interface, et donc la modification des données.
 L'ensemble est interconnecté afin d'assurer une fluidité optimale, tant pour les administrateurs que pour les joueurs.<br><br>
 
-<h3>Balanced by Daylight</h3>
-Balanced by Daylight est un site aidant les joueurs compétitifs de Dead by Daylight (DBD) dans la création de leur builds.<br>
-<a href="https://balancedbydaylight.com/balance-checker" target="_blank"><img src="./images/bbd.png" alt="Balanced by Daylight" class="img-fluid"/></a><br>
-Dead by Daylight (DBD) étant un jeu asymétrique et déséquilibré, il est nécessaire de bannir de nombreuses compétences et objets lors des tournois.
-Chaque tournoi ayant ses propres règles et restrictions, il est facile pour les joueurs de se perdre et de commettre des erreurs avant même que leur match commence.<br>
-Balanced by Daylight a pour objectif d'aider les joueurs en leur fournissant un site web qui les aide à créer leurs builds tout en respectant les restrictions d'un grand nombre de tournois en collaboration.<br>
-<br>
-Je ne suis pas à l'origine de ce projet, mais j'en suis le principal contributeur. J'ai principalement effectué de nombreuses modifications sur l'aspect visuel du site, l'ajout du drag & drop, l'import et export des données, le tout afin d'en améliorer l'expérience utilisateur.<br>
-Mais surtout, j'ai été à l'origine d'une fonctionnalité appelée l'autobalancer. Son objectif est de permettre à n'importe quel tournoi d'héberger un fichier JSON sur GitHub contenant ses règles, puis, de notre côté, de récupérer ces règles périodiquement et de les mettre à disposition des utilisateurs.<br>
-<a href="https://github.com/Floliroy/DBD-Balance-Checker" target="_blank">Lien Github du projet</a><br><br>
-
+<h3>Team AEGIS</h3>
+Team AEGIS est le site web officiel de l'équipe esport AEGIS.<br>
+<a href="https://www.teamaegis.fr" target="_blank"><img src="./images/aegis.png" alt="Team AEGIS" class="img-fluid"/></a><br>
+Bien que je ne sois pas le développeur initial de ce site web, je suis actuellement responsable de sa maintenance et de ses mises à jour, ce qui me permet de travailler et de m'auto-former avec le framework Svelte.
+<br><br>
 
 <h3>NémaCards</h3>
 Les NémaCards sont un système de cartes à collectionner (type Panini) en ligne achetable avec des points de chaîne Twitch.<br>
@@ -37,4 +31,16 @@ Je stocke ensuite dans une base de données MySQL les jetons permettant d'ouvrir
 Il y a donc une base de données solide et bien structurée, ainsi que des procédures SQL pour gérer les "transactions" de jetons et de cartes, en plus d'un système de sécurité utilisant les IDs et tokens Twitch pour différencier chaque utilisateur.<br><br>
 Un projet similaire avait été réalisé en collaboration avec Shaunz, intitulé "Les Z'Oeufs", sur lequel je m'occupais uniquement du back-end, tandis qu'un autre développeur se chargeait du front-end.<br>
 Ce projet avait connu de nombreux ajouts de fonctionnalités, ce qui a entraîné une base de données encore plus volumineuse et l'implémentation de plusieurs algorithmes supplémentaires.
-Il a cependant dû être arrêté et n'est désormais plus en ligne.
+Il a cependant dû être arrêté et n'est désormais plus en ligne.<br><br>
+
+
+<h3>Balanced by Daylight</h3>
+Balanced by Daylight est un site aidant les joueurs compétitifs de Dead by Daylight (DBD) dans la création de leur builds.<br>
+<a href="https://balancedbydaylight.com/balance-checker" target="_blank"><img src="./images/bbd.png" alt="Balanced by Daylight" class="img-fluid"/></a><br>
+Dead by Daylight (DBD) étant un jeu asymétrique et déséquilibré, il est nécessaire de bannir de nombreuses compétences et objets lors des tournois.
+Chaque tournoi ayant ses propres règles et restrictions, il est facile pour les joueurs de se perdre et de commettre des erreurs avant même que leur match commence.<br>
+Balanced by Daylight a pour objectif d'aider les joueurs en leur fournissant un site web qui les aide à créer leurs builds tout en respectant les restrictions d'un grand nombre de tournois en collaboration.<br>
+<br>
+Je ne suis pas à l'origine de ce projet, mais j'en suis le principal contributeur. J'ai principalement effectué de nombreuses modifications sur l'aspect visuel du site, l'ajout du drag & drop, l'import et export des données, le tout afin d'en améliorer l'expérience utilisateur.<br>
+Mais surtout, j'ai été à l'origine d'une fonctionnalité appelée l'autobalancer. Son objectif est de permettre à n'importe quel tournoi d'héberger un fichier JSON sur GitHub contenant ses règles, puis, de notre côté, de récupérer ces règles périodiquement et de les mettre à disposition des utilisateurs.<br>
+<a href="https://github.com/Floliroy/DBD-Balance-Checker" target="_blank">Lien Github du projet</a>
